sonarr/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "sonarr"
spec:
  selector:
    app: "sonarr"
  ports:
    - port: 8989
      name: "sonarr-http"
      protocol: "TCP"
